SFDC Automation/src/objects/Quota__c.object
<CustomObject>
    <fields>
        <fullName>Adjusted_New_Add_Quota__c</fullName>
        <label>Adjusted New Add Quota</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Renewal_Quota__c</fullName>
        <label>Adjusted Renewal Quota</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractual_Sales_Experience__c</fullName>
        <label>Contractual Sales Experience</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOS_New_Add_Quota__c</fullName>
        <label>DOS New Add Quota</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOS_Renewal_Quota__c</fullName>
        <label>DOS Renewal Quota</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Historical_Quota_Attainment__c</fullName>
        <label>Historical Quota Attainment</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Potential__c</fullName>
        <label>Market Potential</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_New_Add_Quota__c</fullName>
        <label>Original New Add Quota</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Renewal_Quota__c</fullName>
        <label>Original Renewal Quota</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rookie__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if sales person has not been in the current position for more than one year before quota was assigned.</description>
        <label>Rookie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ryder_Tenure__c</fullName>
        <label>Ryder Tenure</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Territory</label>
        <referenceTo>Sales_Territory__c</referenceTo>
        <relationshipLabel>Quotas</relationshipLabel>
        <relationshipName>Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Quota</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>Manager__c</columns>
        <columns>Rookie__c</columns>
        <columns>Original_New_Add_Quota__c</columns>
        <columns>Original_Renewal_Quota__c</columns>
        <columns>Adjusted_New_Add_Quota__c</columns>
        <columns>Adjusted_Renewal_Quota__c</columns>
        <columns>DOS_New_Add_Quota__c</columns>
        <columns>DOS_Renewal_Quota__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quota Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Only_Admin_Can_Change_Previous_Yr_Quota</fullName>
        <active>true</active>
        <description>This rule prevents sales people from changing the quotas for previous years when they are working on the current year quotas.</description>
        <errorConditionFormula>AND(NOT($Profile.Name = &apos;System Administrator&apos;), NOT($Profile.Name = &apos;SSO System Administrator&apos;), 
NOT($Profile.Name = &apos;Business Support Non SSO&apos;), 
NOT($Profile.Name = &apos;Business Admin&apos;), 
NOT($Profile.Name = &apos;Business Admin Non SSO&apos;)) 
 &amp;&amp; YEAR( From_Date__c) &lt; YEAR ( TODAY() )</errorConditionFormula>
        <errorMessage>Only Salesforce Administrators can edit a quota for a previous year.</errorMessage>
    </validationRules>
</CustomObject>